<resources>
    <string name="version">Version 1.0</string>
    <string name="app_name">自我修养</string>
    <string name="appnameabout">自我修养 正式版</string>
    <string name="book">《富兰克林自传》</string>
    <string name="devTemp">.</string>
    <string name="main_toolbar_setting">设置</string>
    <string name="main_toolbar_help">帮助</string>
    <string name="main_toolbar_contactme">请吐槽</string>
    <string name="today_control_popup_title">今天做的怎么样？</string>
    <string name="todayControlPopupTitleFormat">%1$s%2$s做的怎么样？</string>
    <string name="today_control_popup_good">\n非常好</string>
    <string name="today_control_popup_bad">\n糟糕</string>
    <string name="comment">感想：</string>
    <string name="hintComment">嘿，你为什么没有做到？</string>
    <string name="pupupAddComment">確定</string>
    <string name="quotesBegin">“</string>
    <string name="quotesEnd">”</string>
    <string name="reportTitle">最新周期污点</string>
    <string name="commentTitle">感想TOP15</string>
    <string name="mainMotto">题句</string>
    <string name="titleTenperance">节制</string>
    <string name="titleTenperanceDes">食不过饱\n饮酒不醉</string>
    <string name="titleTenperanceMotto">饮食自倍，肠胃乃伤；饮食以时，饥饱得中；不欲极饥而食，食不过饱。不欲极渴而饮，饮不过多；以酒为浆，故半百而衰也</string>
    <string name="titleSilence">缄默</string>
    <string name="titleSilenceDes">言必于人于己有益\n避免无益的聊天</string>
    <string name="titleSilenceMotto">切莫交浅言深；不要尝试说服别人。当你试着说服别人的时候，其实你在关闭你的心门，你的说服，往往建立对别人的否定之上，或者到最后，你干脆把对方的不接受，归结为他的愚蠢。</string>
    <string name="titleOrder">规律</string>
    <string name="titleOrderDes">每一样东西应有一定的安放的地方\n每件日常事务当有一定的时间</string>
    <string name="titleOrderMotto">早上6点准时起床，晚上11点准时上床睡觉；按时吃饭，少食多餐，一定要吃早餐；每周最少一次半个小时无氧运动，最少一次半个小时有氧运动</string>
    <string name="titleResolution">决心</string>
    <string name="titleResolutionDes">当作必做\n决心要做的事情应当坚持不懈</string>
    <string name="titleResolutionMotto">言必信，行必果；再不做，你又要后悔了；昨天，你说了今天；种一棵树最好的时间是10年前，其次是现在；做一件事情，坚持到底，无论你的选择是怎么样的。切忌，不要朝秦慕楚，三心二意</string>
    <string name="titleFrugality">俭朴</string>
    <string name="titleFrugalityDes">用钱必须于人于己有益，换言之，切戒浪费</string>
    <string name="titleFrugalityMotto">关于金钱的真谛：所有那些你十分想购买的东西，之所以对你有那么大的吸引力，是因为你买不起（或者你需要非常努力地工作才能够得到）。假如你能够轻易的支付，那个东西对你来说也就没那么珍贵了</string>
    <string name="titleIndustry">勤勉</string>
    <string name="titleIndustryDes">不浪费时间\n每时每刻做些有用的事戒掉一切不必要的行动</string>
    <string name="titleIndustryMotto">最浪费时间的当然是「社交」：想想看，我们大多数人的一生，通常也就一位灵肉合一的伴侣，两三位知根知底的朋友。而互联网，却可以让我们理论上和任何人交谈，和无数人社交，诱惑着我们把有效的生命投入到无限的「刷社交」活动中，端起一种「天下我大可交尽」的架势。可是，我真怀疑，网线那头的他的世界，我真的可以进入吗？网络上的谈笑风生、称兄道弟、勾搭暧昧，是不是只是一种错觉？我们多少人的「社交」，仅仅是为了排遣浸透骨髓的寂寞？或者仅仅是为了一点雾里看花的虚荣？或者仅仅是为了进入他的身体而非他的内心？</string>
    <string name="titleSincerity">诚恳</string>
    <string name="titleSincerityDes">不欺骗人\n思想要纯洁公正\n说话也要如此</string>
    <string name="titleSincerityMotto">人与人之间，尊重和理解是第一位的；说话做事，为他人着想、为他人负责；己所不欲勿施于人，将心比心地理解别人的难处和困境</string>
    <string name="titleJustice">公正</string>
    <string name="titleJusticeDes">不做不利于人的事\n不要忘记履行对人有益而又是你应尽的义务</string>
    <string name="titleJusticeMotto">你应该清楚君子和而不谋，在面对与你矛盾的人或事时，切勿排除异己</string>
    <string name="titleModeration">中庸</string>
    <string name="titleModerationDes">避免极端\n人若给你应得处罚，你当容忍之</string>
    <string name="titleModerationMotto">你善良，你会遇上善良；你善良，你能带出身边人身上的善良；遇事先分析当事人的思想动机，而不要妄加善恶标签</string>
    <string name="titleCleanliness">清洁</string>
    <string name="titleCleanlinessDes">身体、衣服和住所力求清洁</string>
    <string name="titleCleanlinessMotto">美是这个世界上最有生产力的东西之一，要注意自己的仪表；早上洗漱不仅是清理面部、口腔，还要清理鼻腔、耳道。晚上尽可能也如此，无论你有多懒散；收拾房间，记得扔，无论有多舍不得；用完东西，放回原处，无论有多远</string>
    <string name="titleTranquillity">镇静</string>
    <string name="titleTranquillityDes">勿因小事或普通的不可避免的事故而惊慌失措</string>
    <string name="titleTranquillityMotto">深呼吸，告诉自己这事也会和十年前的某件事一样成为过去</string>
    <string name="titleChastity">贞节</string>
    <string name="titleChastityDes">除了为了健康或生育后代起见，不常举行房事\n切戒房事过度，伤害身体或损害你自己或他人的安宁或名誉</string>
    <string name="titleChastityMotto">我们往往太年轻，不知道感情要细水长流，总是想着一下子天长地久，结果事与愿违。在感情中，记得细水长流</string>
    <string name="titleHumility">谦虚</string>
    <string name="titleHumilityDes">效仿耶稣和苏格拉底</string>
    <string name="titleHumilityMotto">当别人表示一个我认为是错误的意见时，我并不粗暴地驳斥他的主张，立刻指出他提案中某些荒谬悖理的地方，我放弃了这样驳斥时所给我的快慰。在回答时我开始指出在某些情况下他的看法是正确的，但在当前的情况下在我看来或是好像有些不同</string>
    <string name="welcome11">我们坚持一件事情\n并不是因为这样做了会有效果\n而是坚信\n这样做是对的\n\n——哈维尔</string>
    <string name="welcome12">如果你想要你从未拥有过的东西\n那么你必须去做你从未做过的事。</string>
    <string name="welcome13">YESTERDAY\nYOU SAID\nTOMORROW\n——JUST DO IT.</string>
    <string name="welcome14">人会长大三次\n第一次是在发现自己不是世界中心的时候\n第二次是在发现即使再怎么努力\n终究还是有些事令人无能为力的时候\n第三次是在\n明知道有些事可能会无能为力\n但还是会尽力争取的时候</string>
    <string name="welcome15">反思是360的文化\n反思不是一件负面的事情\n并不是做错事情了才需要反思\n每个人每天都需要反思\n经验是过去的\n要敢于不断否定自己\n对我来说\n反思包括两个方面：\n第一，从过去的失败中能总结出什么经验，避免重蹈覆辙\n第二，保持学习的心态，向用户学习，向竞争对手学习\n——周鸿祎《我的互联网方法论》</string>
    <string name="welcome16">一个人要替一个花园拔草\n他不能企图一次就消灭所有的野草\n这样做会超过他的能力\n但是他在某一个时候只对付一个花坛\n在拔完了第一个花坛以后\n才动手第二个\n——本杰明.富兰克林</string>
    <string name="welcome1">这儿我要坚持到底\n若是上苍有灵\n（整个宇宙和宇宙间的一切都在大声叫喊证明上帝的存在）\n上帝必然喜悦美好的德行\n而上帝所喜悦的人必然幸运\n——《凯朵》艾迪巡</string>
    <string name="welcome2">啊\n哲学\n生命的指南\n啊\n美德的探索者\n罪恶的祛除者啊\n有一天\n照您的指示好好地干\n总会趋吉避凶的\n——西塞罗</string>
    <string name="welcome3">她右手掌握着无穷无尽的岁月\n左手里全是财富和荣誉\n她的道路是幸福快乐的\n她的方向是和平的\n——《圣经》所罗门.箴言（第三章，十六十七两节）</string>
    <string name="welcome4">啊\n全能至上的上帝\n慈悲的上帝\n仁慈的指路人\n增添我的只会\n使我能够看清我真正的利益\n加强我的意志力\n使我能够执行智慧的命令\n接受我对您其他子民的衷心服役\n座位我对上帝不断福佑的唯一可能的报答\n——本杰明.富兰克林</string>
    <string name="welcome5">光明生命之父\n之高之神\n教我认识美德\n认识至善之神\n就素我脱离放荡\n虚荣和恶习\n脱离一切下贱的追逐\n求神使我的灵魂充满只是\n心神的安宁\n纯洁的德行\n和圣洁、真实、永无止息的至福幸运\n——汤姆逊</string>
    <string name="totalUsedCount">总共运行软件的天数</string>
    <string name="totalReflectiveCount">总共反省的次数</string>
    <string name="settingtitle">设置</string>
    <string name="moralItem">美德项目</string>
    <string name="cycle">周期</string>
    <string name="welcome">题句</string>
    <string name="done">完成</string>
    <string name="settingProjectItemDescript">我提出了十三种德行，这是当时我认为是必需的或是相宜的全部德行名目，在每一项底下我加了一些简单的箴言，充分地说明了我认为该词涵义应有的范围</string>
    <string name="settingWelcomeDescrpit">我从艾迪逊的“凯朵”中引用下面这几行作为这本小册子的题句</string>
    <string name="SettingCycleDescription">我决定给与每一项美德一个星期的严格注意，如此轮流替换</string>
    <string name="SettingCycleSeekbar">拖动调整训练周期：</string>
    <string name="settingRestore">恢复默认</string>
    <string name="deleteHistoryComment">清空历史感想</string>
    <string name="cancel">取消</string>
    <string name="OK">确定</string>
    <string name="title">项目：</string>
    <string name="description">描述：</string>
    <string name="motto">箴言：</string>
    <string name="hintSettingTitle">这里输入美德名称</string>
    <string name="hintSettingDes">描述这项美德的具体意义</string>
    <string name="hintSettingMotto">引用一段你喜欢的话，来定义该美德</string>
    <string name="yesterday">昨天</string>
    <string name="dayBeforeYesterday">前天</string>
    <string name="moreDay">天前</string>
    <string name="startNewMoralInfo">开始进行为期 %1$d 天的 %2$s 训练计划,密切预防关于  %2$s 的任何极细微的过失</string>
    <string name="startNewMoralInfo2">已经完成训练  %1$s ，以后只是记下有关的过失\n开始进行为期  %2$d 天的 %3$s 训练计划;密切预防关于 %3$s 的任何极细微的过失</string>
    <string name="beginMoral">"%1$s 训练已经进行到第  %2$d 天"</string>
    <string name="manyDaynotuse">你已经超过 %1$d 天没有反省，加油</string>
    <string name="next">下一步</string>
    <string name="nextPage1">下一页（&#8531;）</string>
    <string name="nextPage2">下一页（&#8532;）</string>
    <string name="restoreToDefault">已经恢复到软件初始状态！</string>
    <string name="restartToBegin">已经清除历史数据</string>
    <string name="moveMoral"> %1$s 从%2$d 移至 %3$d</string>
    <string name="noMoreNeed">"不再需要    %1$d.%2$s"</string>
    <string name="day">天</string>
    <string name="minCycleInfo">我认为最好还是不要立刻全面地去尝试，以致分散注意力，最好还是在一个时期内集中精力对付其中的一个。</string>
    <string name="maxCycleWarning">训练周期不宜过长，太长会拖累整个项目，让你产生放弃使用的念头</string>
    <string name="addNew">新增</string>
    <string name="modifyMoralitem">修改%1$s</string>
    <string name="system">系统</string>
    <string name="reStart">重新开始</string>
    <string name="language">语言</string>
    <string name="share">关注我的腾讯微博</string>
    <string name="sina">在新浪微博里讨论</string>
    <string name="rate">评分</string>
    <string name="aboutFranklin">关于本杰明·富兰克林</string>
    <string name="aboutApp">关于</string>
    <string name="help">帮助</string>
    <string name="helpBook">《富兰克林自传》的训练方法</string>
    <string name="franklin">本杰明·富兰克林</string>
    <string name="restartinfo">重头开始新的周期\n将会删除你已经记录的所有数据，并将进度设置为你训练计划的第一天\n你确定要重新开始吗？</string>
    <string name="deleteHistoryCommentInfo">删除你所有的感想。感想是你的一份宝贵财产，删除之后就不可恢复。你确定继续吗？</string>
    <string name="restoretinfo">恢复默认会删除你所有的配置数据，软件恢复初始状态！\n你需要重新配置训练计划\n你确定要恢复默认吗？</string>
    <string name="benjaminfranklininfo">本杰明·富兰克林（Benjamin Franklin，1706年1月17日－1790年4月17日），出生于美国麻省波士顿，是美国著名政治家、科学家，同时亦是出版商、印刷商、记者、作家、慈善家；更是杰出的外交家及发明家。他是美国革命时重要的领导人之一，参与了多项重要文件的草拟，并曾出任美国驻法国大使，成功取得法国支持美国独立。本杰明·富兰克林曾经进行多项关于电的实验，并且发明了避雷针。他还发明了双焦点眼镜，蛙鞋等等。本杰明·富兰克林是共济会的成员，被选为英国皇家学会院士。他亦是美国首位邮政局长。\n由于1928年以后每张百元美钞上都印有本杰明·富兰克林的肖像，再加上美元身为世界主要流通货币的重要性，导致本杰明·富兰克林的长相广为世界各地不少人所熟悉。
美国在线曾于2005年举办了票选活动《最伟大的美国人》，当中富兰克林获选为美国最伟大人物的第五位。</string>
    <string name="enjoylife">版权与说明\nCopyright ©2014 Pavkoo,All Rights Reserved.\n\n如果你在使用过程中有任何问题，可以联系我：Pavkoo@live.com\n或者加入到我们的QQ群一起讨论：175367237</string>
    <string name="bookcontenttitle1">人要发财，就得请教妻子</string>
    <string name="finishDone">哇，好厉害\n钦佩你的坚持到底!</string>
    <string name="store">存档，开始新一轮训练</string>
    <string name="or">或者</string>
    <string name="Finishmodify">调整美德项目</string>
    <string name="finishOneTime">一轮训练已经完成，你可以</string>
    <string name="Mainshare">分享</string>
    <string name="checknew">检查更新</string>
    <string name="backupRestore">备份与恢复</string>
    <string name="backupnow">立即备份</string>
    <string name="restorenow">恢复</string>
    <string name="csvsdfrankinbackup">导出CSV格式的数据到SD中，或者恢复以前备份的数据（恢复数据将删除本地数据，请谨慎）。具体的位置在：</string>
    <string name="csvfranklinbackupfile">SD卡/Frankin/backUp/\nconfig.csv --- 系统配置文件\nmorals.csv --- 美德项目文件\ncomments.csv --- 感想记录文件\nmottos.csv --- 题句文件\nsigns.csv --- 反省记录文件</string>
</resources>