<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/appBorderPadding"
    android:background="@drawable/popup_background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="@dimen/textPadding"
        android:gravity="center_vertical|left"
        android:padding="@dimen/textPadding"
        android:text="@string/appnameabout"
        android:textColor="@color/white_app_txt_black"
        android:textSize="@dimen/textSizebig" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_app_bg_darkgray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/textPadding"
        android:text="@string/version"
        android:textColor="@color/white_app_txt_gray" />

    <TextView
        android:id="@+id/tvcopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:lineSpacingMultiplier="1.3"
        android:padding="@dimen/textPadding"
        android:clickable="true"
        android:text="@string/enjoylife"
        android:textColor="@color/white_app_txt_gray" />

    <ImageView
        android:id="@+id/ivSettingSystemMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/devTemp"
        android:padding="@dimen/textPadding"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/aboutpavkooanim" />

    <com.pavkoo.franklin.controls.AnimMessage
        android:id="@+id/amSettingsystemMeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/settingmeCheckupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/textPadding"
        android:background="@drawable/setting_roundrect_selector"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/textPadding"
        android:text="@string/checknew"
        android:textColor="@color/white_app_txt_white" />

</LinearLayout>