<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/appBorderPadding"
    android:background="@drawable/popup_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_roundrect_popup_top"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/devTemp"
            android:src="@drawable/systemhead" />

        <TextView
            android:id="@+id/tvSettingSystemFranklinTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/appBorderPadding"
            android:gravity="center"
            android:text="@string/franklin"
            android:textColor="@color/white_app_txt_white"
            android:textSize="@dimen/textSizebig" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svSettingSystemFranklin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingBottom="@dimen/appBorderPadding">

        <TextView
            android:id="@+id/tvSettingSystemFranklinInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:lineSpacingMultiplier="1.3"
            android:padding="@dimen/appBorderPadding"
            android:textColor="@color/white_app_txt_black"
            android:text="@string/benjaminfranklininfo" />
    </ScrollView>

</LinearLayout>